# resume-ai

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: db.py  main.py  models.py  nim_client.py
backend/app/routers/: feedback.py  generate.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: FeedbackWidget.tsx  InputForm.tsx  ResultsPanel.tsx
